# prompt-injection-guardrail

./: .gitignore  DATA_NOTES.md  README.md  pyproject.toml  requirements.txt
data/: DATASET_SOURCES.md  base_prompts.csv  custom_prompts.csv  custom_prompts_detailed_archive.csv  master.csv  prompts.csv  training.csv
data/splits/: test.csv  train.csv
models/: prompt_injection_model.joblib  prompt_injection_model_metadata.json
scripts/: build_dataset.py  build_training_set.py  download_base_dataset.py  evaluate.py  normalize_merge.py  train.py
src/prompt_injection_detector/: __init__.py  api.py  combiner.py  heuristics.py  ml.py
src/prompt_injection_detector/static/: app.js  index.html  styles.css
tests/: test_api.py  test_combiner.py  test_heuristics.py  test_ml.py
