[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-injection-detector"
version = "0.1.0"
description = "Layered prompt-injection detector with heuristics and TF-IDF logistic regression."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
